<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bloomy</string>
    <string name="img_logo_bloomy_splash">Image Logo Bloomy Splash</string>
    <string name="img_background_home">Image Background Home</string>
    <string name="btn_get_started_home">Get Started</string>
    <string name="tv_title_home">Sail into the\nSea\'s Splendor</string>
    <string name="tv_subtitle_home">Let the Waves of\nInnovation Echo\nthe Melody of\nMaritime Prosperity</string>
    <string name="img_logo_bloomy_sign_in">Image Logo Bloomy Sign In</string>
    <string name="img_bottom_sheet_sign_in">Image Bottom Sheet Sign In</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="et_hint_email_sign_in">example@gmail.com</string>
    <string name="et_hint_password_sign_in">••••••••</string>
    <string name="tv_title_sign_in">Sign In</string>
    <string name="tv_subtitle_sign_in">Sign in to your account</string>
    <string name="tv_email_sign_in">Email</string>
    <string name="tv_password_sign_in">Password</string>
    <string name="tv_sign_up_hint">Don\’t have an account?</string>
    <string name="tv_forgot_password_dialog">Forgot Password</string>
    <string name="tv_description_forgot_password_dialog">Please provide the email\naddress that you used when you\nsigned up for your account</string>
    <string name="et_hint_email_forgot_password_dialog">example@gmail.com</string>
    <string name="img_bottom_sheet_sign_up">Image Bottom Sheet Sign Up</string>
    <string name="btn_resend_verification">Resend Link</string>
    <string name="et_hint_username_sign_up">example</string>
    <string name="et_hint_email_sign_up">example@gmail.com</string>
    <string name="et_hint_password_sign_up">••••••••</string>
    <string name="et_hint_confirm_password_sign_up">••••••••</string>
    <string name="tv_title_sign_up">Sign Up</string>
    <string name="tv_subtitle_sign_up">Create your new account</string>
    <string name="tv_username_sign_up">Username</string>
    <string name="tv_email_sign_up">Email</string>
    <string name="tv_password_sign_up">Password</string>
    <string name="tv_confirm_password_sign_up">Confirm Password</string>
    <string name="tv_sign_in_hint">Already have an account?</string>
    <string name="tv_or_sign_up">Or</string>
    <string name="tv_resend_verification_hint">Verification link expired?</string>
    <string name="tv_send_verification_link_dialog">Resend Verification Link</string>
    <string name="tv_description_send_verification_link_dialog">Please provide the email\naddress that you used when you\nsigned up for your account</string>
    <string name="et_hint_email_send_verification_link_dialog">example@gmail.com</string>
    <string name="img_background_sign_up_success">Image Background Sign Up Success</string>
    <string name="img_space_sign_up_success">Image Space Sign Up Success</string>
    <string name="btn_continue_sign_up_success">Continue</string>
    <string name="tv_title_sign_up_success">Your account\nhas been created\nsuccessfully</string>
    <string name="tv_subtitle_sign_up_success">Please check your email for verification\nlink to activate your account</string>
    <string name="img_location_sail_decision">Image Location Sail Decision</string>
    <string name="img_outlook_sail_decision">Image Outlook Sail Decision</string>
    <string name="img_humidity_sail_decision">Image Humidity Sail Decision</string>
    <string name="img_wind_speed_sail_decision">Image Wind Speed Sail Decision</string>
    <string name="img_wind_direction_sail_decision">Image Wind Direction Sail Decision</string>
    <string name="img_bottom_sheet_dashboard">Image Bottom Sheet Dashboard</string>
    <string name="img_top_news">Image Top News</string>
    <string name="img_today_news">Image Today News</string>
    <string name="tv_hello_username">Hello, Username</string>
    <string name="tv_welcome_back">Welcome Back</string>
    <string name="tv_location_sail_decision">Jakarta, Indonesia</string>
    <string name="tv_outlook_sail_decision">Day Cloudy</string>
    <string name="tv_temperature_sail_decision">21°C</string>
    <string name="tv_humidity_sail_decision">70%</string>
    <string name="tv_wind_speed_sail_decision">3m/s</string>
    <string name="tv_wind_direction_sail_decision">NNW</string>
    <string name="tv_description_sail_decision">Today is a good day to sail</string>
    <string name="tv_top_news_dashboard">Top News</string>
    <string name="tv_top_news">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="tv_today_news_dashboard">Today\'s News</string>
    <string name="tv_title_today_news">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="tv_date_today_news">20 Nov 2023, 12:21 WIB</string>
    <string name="tv_read_more_today_news">Read More</string>
    <string name="title_fish_grading">Fish Grading</string>
    <string name="img_fish_grading">Image Fish Grading</string>
    <string name="img_bottom_sheet_fish_grading">Image Bottom Sheet Fish Grading</string>
    <string name="tv_title_fish_grading">Grade your fish,\nunveil the quality in every catch!</string>
    <string name="title_market">Market</string>
    <string name="search_bar_market">Search Bloomy</string>
    <string name="tab_layout_grade_market">Grade</string>
    <string name="img_bottom_sheet_market">Image Bottom Sheet Market</string>
    <string name="tv_title_market">Navigate the waves,\ndiscover your perfect fish!</string>
    <string name="tv_fresh_catch_market">Fresh Catch of the Day</string>
    <string name="img_fresh_catch_market">Image Fresh Catch Market</string>
    <string name="img_grade_fresh_catch_market">Image Grade Fresh Catch Market</string>
    <string name="img_location_fresh_catch_market">Image Location Fresh Catch Market</string>
    <string name="tv_title_fresh_catch_market">Lorem Ipsum Fish</string>
    <string name="tv_grade_fresh_catch_market">A</string>
    <string name="tv_price_fresh_catch_market">Rp50.000/kg</string>
    <string name="tv_quantity_fresh_catch_market">20 kg left</string>
    <string name="tv_location_fresh_catch_market">Jakarta Utara</string>
    <string name="img_market_grade_product">Image Market Grade Product</string>
    <string name="img_favorite_market_grade_product">Image Favorite Market Grade Product</string>
    <string name="img_location_market_grade_product">Image Location Market Grade Product</string>
    <string name="tv_title_market_grade_product">Lorem Ipsum Fish</string>
    <string name="tv_price_market_grade_product">Rp50.000/kg</string>
    <string name="tv_quantity_market_grade_product">20 kg left</string>
    <string name="tv_location_market_grade_product">Jakarta Utara</string>
    <string name="title_market_search_product">Search Product</string>
    <string name="search_bar_market_product">Search Bloomy</string>
    <string name="img_bottom_sheet_market_search_product">Image Bottom Sheet Market Search Product</string>
    <string name="tv_description_market_search_product">Showing 0 result</string>
    <string name="img_market_search_product">Image Market Search Product</string>
    <string name="img_grade_market_search_product">Image Grade Market Search Product</string>
    <string name="img_location_market_search_product">Image Location Market Search Product</string>
    <string name="tv_title_market_search_product">Lorem Ipsum Fish</string>
    <string name="tv_grade_market_search_product">A</string>
    <string name="tv_price_market_search_product">Rp50.000/kg</string>
    <string name="tv_quantity_market_search_product">20 kg left</string>
    <string name="tv_location_market_search_product">Jakarta Utara</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="img_market_product_detail">Image Market Product Detail</string>
    <string name="img_bottom_sheet_market_product_detail">Image Bottom Sheet Market Product Detail</string>
    <string name="img_grade_sheet_market_product_detail">Image Grade Sheet Market Product Detail</string>
    <string name="img_content_divider_description_market_product_detail">Image Content Divider Description Market Product Detail</string>
    <string name="img_content_divider_seller_market_product_detail">Image Content Divider Seller Market Product Detail</string>
    <string name="img_location_seller_market_product_detail">Image Location Seller Market Product Detail</string>
    <string name="img_background_button_market_product_detail">Image Background Market Product Detail</string>
    <string name="img_content_divider_market_product_detail">Image Content Divider Market Product Detail</string>
    <string name="img_favorite_container_market_product_detail">Image Favorite Container Market Product Detail</string>
    <string name="img_favorite_market_product_detail">Image Favorite Market Product Detail</string>
    <string name="tv_title_market_product_detail">Lorem Ipsum Fish</string>
    <string name="tv_grade_market_product_detail">Grade \"A\"</string>
    <string name="tv_price_market_product_detail">Rp50.000/kg</string>
    <string name="tv_quantity_market_product_detail">20 kg left</string>
    <string name="tv_hint_description_market_product_detail">Description</string>
    <string name="tv_value_description_market_product_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, duis aute irure dolor in reprehenderit.</string>
    <string name="tv_name_seller_market_product_detail">Lorem\'s Store</string>
    <string name="tv_location_seller_market_product_detail">Jakarta Utara</string>
    <string name="title_seller_detail">Seller Detail</string>
    <string name="img_phone_seller_detail">Image Phone Seller Detail</string>
    <string name="img_location_seller_detail">Image Location Seller Detail</string>
    <string name="img_bottom_sheet_seller_detail">Image Bottom Sheet Seller Detail</string>
    <string name="img_cancel_buy_bottom_sheet_dialog">Image Cancel Buy Bottom Sheet Dialog</string>
    <string name="img_order_detail_content_divider_buy_bottom_sheet_dialog">Image Order Detail Content Divider Buy Bottom Sheet Dialog</string>
    <string name="img_value_quantity_container_buy_bottom_sheet">Image Value Quantity Container Buy Bottom Sheet Dialog</string>
    <string name="img_subtract_quantity_buy_bottom_sheet_dialog">Image Subtract Quantity Buy Bottom Sheet Dialog</string>
    <string name="img_add_quantity_buy_bottom_sheet_dialog">Image Add Quantity Buy Bottom Sheet Dialog</string>
    <string name="img_value_delivery_method_container_buy_bottom_sheet_dialog">Image Value Delivery Method Container Buy Bottom Sheet Dialog</string>
    <string name="img_drop_down_delivery_method_buy_bottom_sheet_dialog">Image Drop Down Delivery Method Buy Bottom Sheet Dialog</string>
    <string name="img_total_content_divider_buy_bottom_sheet_dialog">Image Total Content Divider Buy Bottom Sheet Dialog</string>
    <string name="tv_order_detail_buy_bottom_sheet_dialog">Order Detail</string>
    <string name="tv_hint_payment_method_buy_bottom_sheet_dialog">Payment Method</string>
    <string name="tv_hint_quantity_buy_bottom_sheet_dialog">Quantity</string>
    <string name="tv_hint_delivery_method_buy_bottom_sheet_dialog">Delivery Method</string>
    <string name="tv_hint_total_buy_bottom_sheet_dialog">Total</string>
    <string name="tv_value_payment_method_buy_bottom_sheet_dialog">Cash On Delivery</string>
    <string name="tv_value_quantity_buy_bottom_sheet_dialog">1</string>
    <string name="tv_value_total_buy_bottom_sheet_dialog">Rp0</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_buy_bottom_sheet_dialog">Buy</string>
    <string name="btn_buy_bottom_sheet_dialog_content_description">Buy Content Description</string>
</resources>