<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_order_detail_buy_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tv_order_detail_buy_bottom_sheet_dialog"
            android:textColor="@color/gray_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_cancel_buy_bottom_sheet_dialog"
            android:layout_width="17.5dp"
            android:layout_height="17.5dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/img_cancel_buy_bottom_sheet_dialog"
            android:src="@drawable/icon_cancel"
            app:layout_constraintBottom_toBottomOf="@id/tv_order_detail_buy_bottom_sheet_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_order_detail_buy_bottom_sheet_dialog" />

        <ImageView
            android:id="@+id/img_order_detail_content_divider_buy_bottom_sheet_dialog"
            android:layout_width="match_parent"
            android:layout_height="7.5dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/img_order_detail_content_divider_buy_bottom_sheet_dialog"
            android:src="@drawable/template_content_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_detail_buy_bottom_sheet_dialog"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_hint_payment_method_buy_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tv_hint_payment_method_buy_bottom_sheet_dialog"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_order_detail_content_divider_buy_bottom_sheet_dialog" />

        <TextView
            android:id="@+id/tv_hint_quantity_buy_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tv_hint_quantity_buy_bottom_sheet_dialog"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_hint_payment_method_buy_bottom_sheet_dialog" />

        <TextView
            android:id="@+id/tv_hint_delivery_method_buy_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tv_hint_delivery_method_buy_bottom_sheet_dialog"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/img_cancel_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toTopOf="@id/tv_hint_quantity_buy_bottom_sheet_dialog" />

        <TextView
            android:id="@+id/tv_value_payment_method_buy_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tv_value_payment_method_buy_bottom_sheet_dialog"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_hint_payment_method_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toBottomOf="@id/tv_hint_payment_method_buy_bottom_sheet_dialog" />

        <ImageView
            android:id="@+id/img_value_quantity_container_buy_bottom_sheet_dialog"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/img_value_quantity_container_buy_bottom_sheet"
            android:src="@drawable/template_order_detail_container"
            app:layout_constraintEnd_toEndOf="@id/tv_hint_quantity_buy_bottom_sheet_dialog"
            app:layout_constraintStart_toStartOf="@id/tv_hint_quantity_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toBottomOf="@id/tv_hint_quantity_buy_bottom_sheet_dialog"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/img_subtract_quantity_buy_bottom_sheet_dialog"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="7.5dp"
            android:contentDescription="@string/img_subtract_quantity_buy_bottom_sheet_dialog"
            android:src="@drawable/icon_quantity_subtract"
            app:layout_constraintBottom_toBottomOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog"
            app:layout_constraintStart_toStartOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toTopOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog" />

        <TextView
            android:id="@+id/tv_value_quantity_buy_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tv_value_quantity_buy_bottom_sheet_dialog"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog"
            app:layout_constraintEnd_toEndOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog"
            app:layout_constraintStart_toStartOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toTopOf="@+id/img_value_quantity_container_buy_bottom_sheet_dialog" />

        <ImageView
            android:id="@+id/img_add_quantity_buy_bottom_sheet_dialog"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="7.5dp"
            android:contentDescription="@string/img_add_quantity_buy_bottom_sheet_dialog"
            android:src="@drawable/icon_quantity_add"
            app:layout_constraintBottom_toBottomOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog"
            app:layout_constraintEnd_toEndOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toTopOf="@id/img_value_quantity_container_buy_bottom_sheet_dialog" />

        <ImageView
            android:id="@+id/img_value_delivery_method_container_buy_bottom_sheet_dialog"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/img_value_delivery_method_container_buy_bottom_sheet_dialog"
            android:src="@drawable/template_order_detail_container"
            app:layout_constraintEnd_toEndOf="@id/tv_hint_delivery_method_buy_bottom_sheet_dialog"
            app:layout_constraintStart_toStartOf="@id/tv_hint_delivery_method_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toBottomOf="@id/tv_hint_delivery_method_buy_bottom_sheet_dialog" />

        <Spinner
            android:id="@+id/spinner_delivery_method_buy_bottom_sheet_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/off_white"
            android:popupBackground="@color/off_white"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@id/img_value_delivery_method_container_buy_bottom_sheet_dialog"
            app:layout_constraintEnd_toEndOf="@id/img_value_delivery_method_container_buy_bottom_sheet_dialog"
            app:layout_constraintStart_toStartOf="@id/img_value_delivery_method_container_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toTopOf="@id/img_value_delivery_method_container_buy_bottom_sheet_dialog"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/img_drop_down_delivery_method_buy_bottom_sheet_dialog"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="7.5dp"
            android:contentDescription="@string/img_drop_down_delivery_method_buy_bottom_sheet_dialog"
            android:src="@drawable/icon_drop_down"
            app:layout_constraintBottom_toBottomOf="@id/img_value_delivery_method_container_buy_bottom_sheet_dialog"
            app:layout_constraintEnd_toEndOf="@id/img_value_delivery_method_container_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toTopOf="@id/img_value_delivery_method_container_buy_bottom_sheet_dialog" />

        <ImageView
            android:id="@+id/img_total_content_divider_buy_bottom_sheet_dialog"
            android:layout_width="match_parent"
            android:layout_height="7.5dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/img_total_content_divider_buy_bottom_sheet_dialog"
            android:src="@drawable/template_content_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_value_payment_method_buy_bottom_sheet_dialog"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_hint_total_buy_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tv_hint_total_buy_bottom_sheet_dialog"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_value_payment_method_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toBottomOf="@id/img_total_content_divider_buy_bottom_sheet_dialog" />

        <TextView
            android:id="@+id/tv_value_total_buy_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tv_value_total_buy_bottom_sheet_dialog"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_hint_delivery_method_buy_bottom_sheet_dialog"
            app:layout_constraintTop_toTopOf="@id/tv_hint_total_buy_bottom_sheet_dialog" />

        <ImageView
            android:id="@+id/img_content_divider_buy_bottom_sheet_dialog"
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/img_total_content_divider_buy_bottom_sheet_dialog"
            android:src="@drawable/template_content_divider"
            app:layout_constraintBottom_toTopOf="@id/btn_buy_bottom_sheet_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hint_total_buy_bottom_sheet_dialog"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buy_bottom_sheet_dialog"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/btn_buy_bottom_sheet_dialog_content_description"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/btn_buy_bottom_sheet_dialog"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            app:backgroundTint="@color/blue_500"
            app:cornerRadius="10dp"
            app:rippleColor="@color/ripple_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>